# small-cuts

./: .gitignore  .hfignore  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.claude/: launch.json  settings.json
.github/workflows/: ci.yml  eval-on-spark.yml  fetch-eval-photos.yml
docs/: architecture.md  demo-readiness.md  field-notes-small-cuts.md  hackathon-rules.md  implementation-plan.md  product-strategy.md  progress.md  regular-pipeline-library-2026-06-15.md  setup.md  submission-assets-2026-06-15.md  submission-readiness-2026-06-15.md
docs/contracts/: CLAUDE.md  README.md  control.schema.json  moment.schema.json  narrated-scene.schema.json  scene-audio.schema.json
docs/eval/: prompt-ab-comparison.md  run-002-gemma-baseline.md  run-004-scored.md  run-005-scored.md  run-006-scored.md
docs/product/: architecture.md  rehearsal-2026-06-12.md
docs/reviews/: README.md
docs/specs/: llama-backend.md  theme.md  title-card-wiring.md  title-card.md  tts.md  video-input.md
ios/: .gitignore
ios/SmallCuts/: CLAUDE.md  RUNBOOK.md  project.yml
kb/: 2026-06-11-directors-cut-peer-synthesis-for-small-cuts.md  2026-06-11-small-cuts-architecture-decision.md  2026-06-11-small-cuts-hackathon-grounding.md  2026-06-11-small-cuts-product-strategy.md  2026-06-11-small-cuts-repo-bootstrap.md  README.md
modal_app/: midcuts_narrate.py  small_cuts_postcut.py
scripts/: dress_rehearsal.py  promote_uploads_to_library.py  publish_hf_relay.py  seed_langfuse_personas.py  tailnet-connect.sh
scripts/hooks/: block-secrets.sh  ruff-on-edit.sh
tests/: test_app_entrypoint.py  test_config.py  test_contracts.py  test_demo_seed.py  test_engine_library.py  test_engine_main.py  test_engine_read_gate.py  test_engine_session.py  test_eval.py  test_frames.py  test_hf_relay.py  test_llama_backend.py  test_midcuts_narrate_config.py  test_modal_app_config.py  test_modal_upload.py  test_modal_write_token.py  test_narrate_v2.py  test_narrator.py  test_observability.py  test_publish_hf_relay.py  test_relay_cache_invalidation.py  test_relay_range_206.py  test_relay_token_isolation.py  test_space_hooks.py  test_styles.py  test_theme.py  test_title_card.py  test_title_wiring.py  test_tts.py  test_upload_budget.py  test_upload_library.py  test_viewer.py  test_viewer_a11y.py  test_viewer_captions.py  test_viewer_cc_toggle.py  test_viewer_navigation.py  test_viewer_upload_requirements.py
(+129 files in other folders)
